--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,57 @@
-/*
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body {
-  background: #0ef1de;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-image: url("/src/todo-2.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 50% 50%;
-} */
+
 .App {
-  font-size: 18px;
-  width: 100%;
-  height: 100%;
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 10rem;
+  height: 20rem;
+  font-size: 1rem;
 }
 #root {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
 }
 
 .form {
+  position: absolute;
   display: flex;
-  position: relative;
-  margin-left: 600px;
-  margin-top: 400px;
+  left: 8rem;
+  top: 0.5rem;
+}
+.label {
+  margin-right: 5%;
 }
 
+::placeholder,
+.submit {
+  background-color: #e9e6c4;
+  color: black;
+}
 #list {
-  padding-left: 30em;
-  padding-top: 3%;
-  width: 460px;
+  padding-top: 5%;
+  width: 15rem;
+  height: 25rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
   display: flex;
   flex-direction: column;
-
-  margin-top: 5%;
+  align-content: space-between;
+  margin-top: 25%;
 }
 
 .listItem {
-  padding-left: 10%;
-  padding-top: 2%;
-  width: 460px;
+  width: 10rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -65,22 +61,24 @@ body {
 }
 
 #itemContainer {
-  display: flex;
+  display: inline-flex;
   align-items: center;
+  gap: 10px;
   position: relative;
-  height: 50px;
+  height: 2rem;
 }
 .icon {
   cursor: pointer;
-  padding: 10px;
-  border: 1px solid red;
+  width: 25px;
+  height: 25px;
+  border: 2px solid red;
 }
 .checked {
   text-decoration: line-through;
 }
 .edit {
   display: none;
-  width: 200px;
+  width: 100px;
   position: absolute;
   left: 0;
   top: 15px;
